--- a/index.html
+++ b/index.html
@@ -1,13 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js" defer></script>
   <title>Document</title>
 </head>
+
 <body>
-  <div>test</div>
+
+  <div class="container">
+    <div class="grid-item nav">
+      <div class="logo">
+        <img src="./assets/logo.png" alt="">
+      </div>
+      <menu>
+        <ul>
+          <li>Search</li>
+          <li>filter</li>
+        </ul>
+      </menu>
+    </div>
+    <div class="grid-item sidebar"></div>
+    <div class="grid-item menu">
+      <div class="cards">
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic1-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>Kindness Makes Me Stronger</h1>
+            <p>Children’s Book about Magic of Kindness, Empathy and Respect 
+              Social Emotional Intelligence, and more</p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic2-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>I Am Stronger Than Anger</h1>
+            <p>Picture Book About Anger Management And Dealing With Kids Emotions
+               And Feelings  </p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic3-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>My Way to Keep Anger Away:</h1>
+            <p>Children's Book about Anger Management and Kids Big Emotions 
+               Intelligence, more and more</p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic4-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>My Way to Making Friends</h1>
+            <p>Children’s Book about Friendship, Inclusion and Social Skills
+              more and more
+            </p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic5-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>The Kids' Book of Friends</h1>
+            <p>How to Make Friends and Be a Friend Book about Friendship,
+               Inclusion and Social Skills
+              more and more</p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic6-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>World of Kids' Emotions </h1>
+            <p>Box Set of 8 Books about Emotion Regulation, Social Emotional Intelligence, and more</p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic1-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>La persévérance me rend plus fort</h1>
+            <p>Children’s Book about Magic of Kindness, Empathy and Respect, 
+              more and more
+            </p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic2-342.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>I Am Stronger Than Anger</h1>
+            <p>Picture Book About Anger Management And Dealing With Kids Emotions And Feelings </p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <picture>
+            <img src="./assets/images/pic7-234.jpg" alt="">
+          </picture>
+          <div class="card-content">
+            <h1>La persévérance me rend plus fort</h1>
+            <p>Un livre pour enfants sur les émotions sociales, la confiance en soi, la gestion de la frustration,
+              l’estime de soi</p>
+            <div class="card-info">
+              <button>Get Only By: <span class="price">$15<sup>99</sup></span></button>
+              <div class="card-read">
+                <label for="read">Read</label>
+                <input type="checkbox" name="read" id="read">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
