feat: add checked book to my books list

--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
 
       <div class="my-books">
         <h1 class="">My Books List</h1>
-        <div class="card">
-          <picture>
-            <img src="./assets/images/pic1-342.jpg" alt="">
-          </picture>
+        <div id="favorite-cards">
+          <div class="card">
+            <picture>
+              <img src="./assets/images/pic1-342.jpg" alt="">
+            </picture>
 
-          <div class="card-content">
-            <h1>Kindness Makes Me Stronger</h1>
-            <p>Children’s Book about Magic of Kindness, Empathy and Respect Social Emotional Intelligence, and more</p>
+            <div class="card-content">
+              <h1>Kindness Makes Me Stronger</h1>
+              <p>Children’s Book about Magic of Kindness, Empathy and Respect Social Emotional Intelligence, and more
+              </p>
+            </div>
           </div>
         </div>
 
@@ -98,13 +101,10 @@
     </div>
     <div class="grid-item menu">
       <div class="cards" id="cards-container">
-       
+
       </div>
     </div>
   </div>
 </body>
 
 </html>
-
-
-
