--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js" defer></script>
-  <title>Document</title>
+  <title>My Library</title>
 </head>
 
 <body>
